Added soft-delete and BaseService
