# server/src/main/java/org/petka/pis/persistence/entities/Pet.java
@@ -4,7 +4,6 @@ import javax.persistence.Entity;
 
 import org.hibernate.annotations.ResultCheckStyle;
 import org.hibernate.annotations.SQLDelete;
-import org.hibernate.annotations.Where;
 
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -19,7 +18,6 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor
 @EqualsAndHashCode(callSuper = true)
 @SQLDelete(sql = "UPDATE pet SET deleted = true WHERE id = ? AND version = ?", check = ResultCheckStyle.COUNT)
-@Where(clause = "deleted = false")
 public class Pet extends BaseEntity {
 
     private String name;
