# server/src/main/java/org/petka/pis/persistence/restquery/RequestQueryFilter.java
@@ -17,13 +17,14 @@ import org.springframework.web.context.WebApplicationContext;
 @Scope(value = WebApplicationContext.SCOPE_REQUEST, proxyMode = ScopedProxyMode.TARGET_CLASS)
 public class RequestQueryFilter {
 
-    public static final String SEPARATOR_CHARS = ",";
+    private static final String SEPARATOR_CHARS = ",";
     private static final String PAGE = "page";
     private static final String SIZE = "size";
     private static final String SORT = "sort";
     private static final String FILTER = "filter";
-    public static final int MAX_PAGE_SIZE = 1000;
-    public static final int DEFAULT_PAGE_SIZE = 50;
+    private static final String INCLUDE_DELETED = "includeDeleted";
+    private static final int MAX_PAGE_SIZE = 1000;
+    private static final int DEFAULT_PAGE_SIZE = 50;
 
 
     private final HttpServletRequest request;
@@ -37,51 +38,51 @@ public class RequestQueryFilter {
     /**
      * Get Query created from the request parameters.
      *
-     * @return {@link Query}
+     * @return {@link RestQuery}
      */
-    public Query getRequestQuery() {
-        Query query = new Query();
+    public RestQuery getRequestQuery() {
+        RestQuery restQuery = new RestQuery();
 
         Map<String, String[]> parameterMap = request.getParameterMap();
-        parameterMap.entrySet().forEach(e -> convertParamToCriteria(query, e));
-        handlePagingParam(query, parameterMap);
-        handleSortParam(query, parameterMap);
+        parameterMap.entrySet().forEach(e -> convertParamToCriteria(restQuery, e));
+        handlePagingParam(restQuery, parameterMap);
+        handleSortParam(restQuery, parameterMap);
 
-        return query;
+        return restQuery;
     }
 
-    private void convertParamToCriteria(final Query query, final Map.Entry<String, String[]> param) {
+    private void convertParamToCriteria(final RestQuery restQuery, final Map.Entry<String, String[]> param) {
         String paramName = param.getKey();
         String[] paramValue = param.getValue();
         if (ArrayUtils.isNotEmpty(paramValue)) {
-            if (!StringUtils.equalsAnyIgnoreCase(paramName, PAGE, SIZE, SORT, FILTER)) {
-                handleParam(query, paramName, paramValue[0]);
+            if (!StringUtils.equalsAnyIgnoreCase(paramName, PAGE, SIZE, SORT, FILTER, INCLUDE_DELETED)) {
+                handleParam(restQuery, paramName, paramValue[0]);
             }
             if (FILTER.equals(paramName)) {
-                handleFilterParam(query, paramValue);
+                handleFilterParam(restQuery, paramValue);
             }
         }
     }
 
-    private void handleParam(final Query query, final String param, final String value) {
+    private void handleParam(final RestQuery restQuery, final String param, final String value) {
         String symbolCandidate = StringUtils.substringBefore(value, SEPARATOR_CHARS);
         SearchCriteria searchCriteria = SearchCriteria.builder().key(param)
                 .operation(SearchOperation.getSimpleOperation(symbolCandidate.charAt(0)))
                 .value(value).build();
-        query.add(searchCriteria);
+        restQuery.add(searchCriteria);
     }
 
-    private void handleFilterParam(final Query query, final String[] values) {
+    private void handleFilterParam(final RestQuery restQuery, final String[] values) {
         for (String value : values) {
             String[] queryParam = StringUtils.split(value, SEPARATOR_CHARS);
             SearchCriteria criteria = SearchCriteria.builder().key(queryParam[0])
                     .operation(SearchOperation.getSimpleOperation(queryParam[1].charAt(0)))
                     .value(queryParam[1].substring(1)).build();
-            query.add(criteria);
+            restQuery.add(criteria);
         }
     }
 
-    private void handlePagingParam(final Query query, final Map<String, String[]> parameterMap) {
+    private void handlePagingParam(final RestQuery restQuery, final Map<String, String[]> parameterMap) {
         int page = 0;
         int size = DEFAULT_PAGE_SIZE;
         String[] pageParam = parameterMap.get(PAGE);
@@ -93,16 +94,16 @@ public class RequestQueryFilter {
         if (sizeParam != null && sizeParam.length > 0) {
             size = Math.min(Integer.parseInt(sizeParam[0]), MAX_PAGE_SIZE);
         }
-        query.paginate(page, size);
+        restQuery.paginate(page, size);
     }
 
-    private void handleSortParam(final Query query, final Map<String, String[]> parameterMap) {
+    private void handleSortParam(final RestQuery restQuery, final Map<String, String[]> parameterMap) {
         String[] sortParam = parameterMap.get(SORT);
         if (sortParam != null && sortParam.length > 0) {
             String sort = sortParam[0];
             //TODO handle direction and multiple fields
             Sort.Order order = new Sort.Order(Sort.Direction.ASC, sort);
-            query.add(order);
+            restQuery.add(order);
         }
     }
 }
